# contract-api

./: .dockerignore  .gitignore  Dockerfile  README.md  TERMS.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/api/: __init__.py  config.py
src/api/database/: __init__.py  config.py
src/api/main/: __init__.py  routes.py
src/api/models/: __init__.py  additional.py  address.py  attachment.py  base_model.py  contact.py  contract.py  general_information.py  item.py  organization_client.py  reassignment.py  role.py  sei.py  union.py
src/api/repositories/: __init__.py  additional_repository.py  address_repository.py  attachment_repository.py  base_repository.py  contact_repository.py  contract_repository.py  general_information_repository.py  item_repository.py  organization_client_repository.py  reassignment_repository.py  role_repository.py  sei_repository.py  union_repository.py
src/api/repositories/interfaces/: __init__.py  additional_repository_interface.py  address_repository_interface.py  attachment_repository_interface.py  base_repository_interface.py  contact_repository_interface.py  contract_repository_interface.py  (+7 more)
src/api/routes/: __init__.py  additional_routes.py  address_routes.py  attachment_routes.py  contact_routes.py  contract_routes.py  general_information_routes.py  item_routes.py  organization_client_routes.py  reassignment_routes.py  role_routes.py  sei_routes.py  union_routes.py
src/api/schemas/: __init__.py  additional_schema.py  address_schema.py  attachment_schema.py  base_schema.py  contact_schema.py  contract_schema.py  general_information_schema.py  item_schema.py  organization_client_schema.py  reassignment_schema.py  role_schema.py  sei_schema.py  union_schema.py
src/api/services/: __init__.py  additional_service.py  address_service.py  attachment_service.py  base_service.py  contact_service.py  contract_service.py  general_information_service.py  item_service.py  organization_client_service.py  reassignment_service.py  role_service.py  sei_service.py  union_service.py
src/api/utils/: __init__.py  password_utils.py  response.py  validators.py
tests/: test_api.py
(+14 files in other folders)
